# brin-cli

./: .env.example  .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.cve  Dockerfile.watcher  Dockerfile.worker  LICENSE  Makefile  NPM_PUBLISHING.md  README.md  deploy.md  docker-compose.yml  index.js  package.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs  routes.rs
crates/cli/: Cargo.toml
crates/cli/src/: agents_md.rs  api_client.rs  config.rs  main.rs  project.rs  ui.rs
crates/cli/src/commands/: add.rs  check.rs  init.rs  mod.rs  remove.rs  scan.rs  skills.rs  uninstall.rs  update.rs  upgrade.rs  why.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  lib.rs  models.rs  queue.rs
crates/cve/: Cargo.toml
crates/cve/src/: github_advisory.rs  main.rs  nvd.rs  osv.rs
crates/seed/: Cargo.toml
crates/seed/src/: main.rs
crates/sus-api/: Cargo.toml
crates/sus-api/src/: handlers.rs  main.rs  routes.rs
crates/sus-cli/: Cargo.toml
crates/sus-cli/src/: api_client.rs  main.rs  ui.rs
crates/sus-cli/src/commands/: add.rs  check.rs  mod.rs  remove.rs  scan.rs  update.rs  why.rs
crates/sus-common/: Cargo.toml
crates/sus-common/src/: db.rs  lib.rs  models.rs  queue.rs
crates/sus-cve/: Cargo.toml
crates/sus-cve/src/: github_advisory.rs  main.rs  nvd.rs  osv.rs
crates/sus-watcher/: Cargo.toml
crates/sus-watcher/src/: main.rs  npm_changes.rs
crates/sus-worker/: Cargo.toml
crates/sus-worker/src/: main.rs  skill_generator.rs
crates/sus-worker/src/scanner/: agentic.rs  capabilities.rs  cve.rs  mod.rs  npm.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: main.rs  npm_changes.rs  registry.rs
crates/worker/: Cargo.toml
crates/worker/src/: doc_generator.rs  main.rs  skill_generator.rs
crates/worker/src/registry/: mod.rs  npm.rs  pypi.rs  skills.rs  types.rs
crates/worker/src/scanner/: agentic.rs  capabilities.rs  cve.rs  mod.rs  npm.rs  pypi.rs
migrations/: 20240101000000_initial.sql  20260129000000_add_maintainers_json.sql  20260129000001_add_cve_unique_constraint.sql  20260131000000_add_registry_column.sql  20260205000000_add_threat_verification.sql  20260205000001_add_dismissed_status.sql  20260218000001_add_install_scripts.sql
scripts/: deploy-cloudrun.sh  install.sh  postinstall.js
