[workspace]
resolver = "2"
members = [
    "crates/cli",
]

[workspace.package]
version = "0.1.14"
edition = "2021"
authors = ["brin contributors"]
license = "MIT"
repository = "https://github.com/superagent-ai/brin"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
