[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sus-api"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
urlencoding = { workspace = true }
tempfile = "3"

[dev-dependencies]
axum-test = "16"
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
