[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brin"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
