[package]
name = "seed"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
