[package]
name = "watcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sus-watcher"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
