[package]
name = "worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sus-worker"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
regex = "1.11"
